--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Our evaluation shows that Collaposer effectively automates the preparation proce
                     <div class="collage-item">
                         <a href="./1. Gallery/catskickmoon.html"
                             target="_blank">
-                            <video autoplay loop muted>
+                            <video autoplay loop muted poster="./1. Gallery/gif/case1-cat-kick-moon>
                                 <source
                                     src="./1. Gallery/videos/case1-cat-kick-moon.mp4"
                                     type="video/mp4">
@@ -201,7 +201,7 @@ Our evaluation shows that Collaposer effectively automates the preparation proce
 
                     <div class="collage-item">
                         <a href="./1. Gallery/gaint.html" target="_blank">
-                            <video autoplay loop muted>
+                            <video autoplay loop muted poster="./1. Gallery/gif/case4-gaintcat.gif">
                                 <source
                                     src="./1. Gallery/videos/case4-gaintcat.mp4"
                                     type="video/mp4">
@@ -212,7 +212,7 @@ Our evaluation shows that Collaposer effectively automates the preparation proce
 
                     <div class="collage-item">
                         <a href="./1. Gallery/flower.html" target="_blank">
-                            <video autoplay loop muted>
+                            <video autoplay loop muted poster="./1. Gallery/gif/case2-flower-woman.gif">
                                 <source
                                     src="./1. Gallery/videos/case2-flower-woman.mp4"
                                     type="video/mp4">
@@ -223,7 +223,7 @@ Our evaluation shows that Collaposer effectively automates the preparation proce
 
                     <div class="collage-item">
                         <a href="./1. Gallery/moon.html" target="_blank">
-                            <video autoplay loop muted>
+                            <video autoplay loop muted poster="./1. Gallery/gif/case5-planets.gif">
                                 <source
                                     src="./1. Gallery/videos/case5-planets.mp4"
                                     type="video/mp4">
@@ -234,7 +234,7 @@ Our evaluation shows that Collaposer effectively automates the preparation proce
 
                     <div class="collage-item">
                         <a href="./1. Gallery/hawaii.html" target="_blank">
-                            <video autoplay loop muted>
+                            <video autoplay loop muted poster="./1. Gallery/gif/case3-hawaii-local.gif">
                                 <source
                                     src="./1. Gallery/videos/case3-hawaii-local.mp4"
                                     type="video/mp4">
