--- a/1. Gallery/gaint.html
+++ b/1. Gallery/gaint.html
@@ -6,14 +6,28 @@
     <meta name="robots" content="noindex">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles case.css">
+    <style>
+        :root{
+            font-size: 16px;
+            line-height: 1.65;
+            text-rendering: optimizeLegibility;
+            -webkit-text-size-adjust: 100%;
+
+            /* match index.html */
+            --content-max: 72ch;
+        }
+        @media (min-width: 1024px) {
+            :root { --content-max: 90ch; }
+        }
+        body{
+            font-family: "SF Pro Text", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+            font-weight: 400;
+            letter-spacing: normal;
+        }
+    </style>
     <title>Case: Giant Cat</title>
     
 </head>
@@ -50,7 +64,7 @@
             </div>
 
             <div class="text-center">
-                <img src="./Collaposer Output/gaintcat.png" alt="Collaposer Output">
+                <img src="./Collaposer Output/gaintcat.png" alt="Collaposer Output" loading="lazy" decoding="async">
             </div>
 
         </section>
@@ -81,7 +95,7 @@
         </section>
         <section>
             <div class="section-title">Final Video</div>
-            <video controls="controls" poster="./posters/case4-gaintcat-stopmotion.png">
+            <video controls playsinline preload="metadata" poster="./posters/case4-gaintcat-stopmotion.png">
                 <source src="./videos/case4-gaintcat.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
