--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Our evaluation shows that Collaposer effectively automates the preparation proce
                     <div class="collage-item">
                         <a href="./1. Gallery/catskickmoon.html"
                             target="_blank">
-                            <video autoplay loop muted poster="./1. Gallery/gif/case1-cat-kick-moon>
+                            <video autoplay loop muted poster="./1. Gallery/gif/case1-cat-kick-moon.gif">
                                 <source
                                     src="./1. Gallery/videos/case1-cat-kick-moon.mp4"
                                     type="video/mp4">
